--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,7 @@
 <main>
   <ul id="users">
     <li>
-      <app-user
-        [avatar]="users[0].avatar"
-        [name]="users[0].name"
-        [id]="users[0].id"
-        (select)="onSelectUser($event)"
-      />
+      <app-user [user]="users[0]" (select)="onSelectUser($event)" />
     </li>
   </ul>
   <app-tasks [name]="selectedUser?.name" />
