--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <li>
       <app-user
         [user]="user"
-        [selected]="user.id === selectedUserId"
+        [selected]="user.id === selectedUserId()"
         (select)="onSelectUser($event)"
       />
     </li>
